# persistentdata

./: .travis.yml  README.md  pd_func_dec_clients.py  pyproject.toml
persistentdata/: __init__.py  decorators.py  persistentdata.py
tests/: test_decorators.py  test_persistentdata.py  test_persistentdata_hdf5.py
